[gd_scene load_steps=36 format=2]

[ext_resource path="res://scenes/characters/botAI3.gd" type="Script" id=1]
[ext_resource path="res://scenes/characters/bot3.gd" type="Script" id=2]
[ext_resource path="res://scenes/characters/bot_gun2.gd" type="Script" id=3]
[ext_resource path="res://sounds/Drop.wav" type="AudioStream" id=4]
[ext_resource path="res://assests/Weapon/gun.png" type="Texture" id=5]
[ext_resource path="res://sounds/CardboardOpen.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/GunShot.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/Cardboard.wav" type="AudioStream" id=8]
[ext_resource path="res://assests/Player/climb.png" type="Texture" id=9]
[ext_resource path="res://sounds/GunReload.wav" type="AudioStream" id=10]
[ext_resource path="res://sounds/jump1.ogg" type="AudioStream" id=11]
[ext_resource path="res://assests/Player/air.png" type="Texture" id=12]
[ext_resource path="res://assests/Addons/vest.png" type="Texture" id=13]
[ext_resource path="res://assests/Addons/cardboard box.png" type="Texture" id=14]
[ext_resource path="res://assests/Addons/head phone military.png" type="Texture" id=15]
[ext_resource path="res://sounds/GunEmpty.wav" type="AudioStream" id=16]
[ext_resource path="res://assests/Effects/light mod.png" type="Texture" id=17]
[ext_resource path="res://assests/Player/idle.png" type="Texture" id=18]
[ext_resource path="res://assests/Player/walk (2).png" type="Texture" id=19]
[ext_resource path="res://scenes/characters/SoundSteps.gd" type="Script" id=20]
[ext_resource path="res://sounds/VestBullet.wav" type="AudioStream" id=21]
[ext_resource path="res://sounds/VestOn.wav" type="AudioStream" id=22]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 0, 0, 222, 302 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 222, 0, 222, 302 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 444, 0, 222, 302 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 205, 316 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 205, 0, 205, 316 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "climb",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 18 ), ExtResource( 12 ) ],
"loop": true,
"name": "air",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
radius = 86.933
height = 97.2053

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 88.8047, 15822.2 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 8937.35, 32.7368 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 87.5391, 15992.7 )

[sub_resource type="CircleShape2D" id=11]
radius = 360.202

[sub_resource type="CircleShape2D" id=12]
radius = 473.667

[sub_resource type="CapsuleShape2D" id=13]
radius = 166.402
height = 100.111

[node name="bot3" type="KinematicBody2D" groups=["characters"]]
position = Vector2( 481.908, 7228.62 )
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.8 )
position = Vector2( -5.62134, 17.6515 )
frames = SubResource( 6 )
animation = "air"

[node name="vest" type="Sprite" parent="."]
position = Vector2( -6.80786, 71.3362 )
texture = ExtResource( 13 )

[node name="head phone military" type="Sprite" parent="."]
position = Vector2( -3.89335, -37.8138 )
texture = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.76444, 16.1961 )
shape = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="SoundJump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = -5.0

[node name="SoundCardboard" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="SoundCardboardOpen" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="SoundAaaahhh" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
pitch_scale = 1.2

[node name="SoundReload" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -5.0

[node name="SoundSteps" type="AudioStreamPlayer2D" parent="."]
max_distance = 4000.0
script = ExtResource( 20 )

[node name="SoundVest" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 22 )
stream_paused = true

[node name="SoundVestBullet" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 21 )
stream_paused = true

[node name="gun" type="Node2D" parent="."]
position = Vector2( 3.8147e-06, 42.7095 )
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="gun"]
wait_time = 0.4

[node name="gun" type="Sprite" parent="gun"]
position = Vector2( 60.4991, 0 )
texture = ExtResource( 5 )

[node name="Light2D" type="Light2D" parent="gun"]
position = Vector2( 268.999, -5 )
z_index = 2
texture = ExtResource( 17 )
texture_scale = 2.0
shadow_enabled = true

[node name="BulletPoint" type="Node2D" parent="gun"]
position = Vector2( 180, -35 )
z_as_relative = false

[node name="SoundShot" type="AudioStreamPlayer2D" parent="gun"]
stream = ExtResource( 7 )

[node name="SoundEmpty" type="AudioStreamPlayer2D" parent="gun"]
stream = ExtResource( 16 )

[node name="aim" type="RayCast2D" parent="gun"]
position = Vector2( 168.01, -52.3848 )
rotation = -1.5708
scale = Vector2( 1, 10 )
enabled = true

[node name="cardboard box" type="Sprite" parent="."]
visible = false
position = Vector2( 4.14063, 9.40469 )
z_index = 2
texture = ExtResource( 14 )

[node name="right_resetter" type="Area2D" parent="."]
position = Vector2( -1534.27, -967.988 )

[node name="player_on_right" type="CollisionShape2D" parent="right_resetter"]
position = Vector2( -18699.3, 355.296 )
shape = SubResource( 8 )

[node name="down_resetter" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="down_resetter"]
position = Vector2( 156.937, -21425.4 )
shape = SubResource( 9 )

[node name="left_resetter" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_resetter"]
position = Vector2( 19751.4, 983.207 )
shape = SubResource( 10 )

[node name="fire zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="fire zone"]
position = Vector2( -0.560547, 0 )
shape = SubResource( 11 )

[node name="AI" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="left_ray" type="RayCast2D" parent="AI"]
position = Vector2( -121.036, -94.1582 )
rotation = 1.5708
enabled = true

[node name="left_ray_down" type="RayCast2D" parent="AI"]
position = Vector2( -112.036, 119.842 )
rotation = 1.5708
enabled = true

[node name="right_ray" type="RayCast2D" parent="AI"]
position = Vector2( 110.65, -91.1582 )
rotation = -1.5708
enabled = true

[node name="right_ray_down" type="RayCast2D" parent="AI"]
position = Vector2( 95.6504, 119.842 )
rotation = -1.5708
enabled = true

[node name="player_detection_zone" type="Area2D" parent="AI"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AI/player_detection_zone"]
shape = SubResource( 12 )

[node name="Timer" type="Timer" parent="AI"]
wait_time = 5.5

[node name="AccessRange" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AccessRange"]
position = Vector2( -2.83167, 13.2142 )
rotation = 1.5708
shape = SubResource( 13 )

[connection signal="body_entered" from="right_resetter" to="." method="_on_right_resetter_body_entered"]
[connection signal="body_entered" from="down_resetter" to="." method="_on_down_resetter_body_entered"]
[connection signal="body_entered" from="left_resetter" to="." method="_on_left_resetter_body_entered"]
[connection signal="body_entered" from="AI/player_detection_zone" to="AI" method="_on_player_detection_zone_body_entered"]
[connection signal="body_exited" from="AI/player_detection_zone" to="AI" method="_on_player_detection_zone_body_exited"]
[connection signal="timeout" from="AI/Timer" to="AI" method="_on_Timer_timeout"]
[connection signal="area_entered" from="AccessRange" to="AI" method="_on_AccessRange_area_entered"]
[connection signal="area_exited" from="AccessRange" to="AI" method="_on_AccessRange_area_exited"]
